--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,12 @@
 
 <h1> Prepared in 2024 </h1>
 
+[267] 
+Yury Demidovich, Petr Ostroukhov, Grigory Malinovsky, Samuel Horváth, Martin Takáč, Peter Richtárik, and Eduard Gorbunov<br>
+<b>Methods with local steps and random reshuffling for generally smooth non-convex federated optimization</b><br>
+<span class="important">Federated Learning Paper</span><br>   
+[<a href="https://arxiv.org/abs/2412.02781">arXiv</a>] [method:  Clip-LocalGDJ, CLERR, Clipped RR-CLI] <br><br> 
+
 [266] 
 Vladimir Malinovskii, Andrei Panferov, Ivan Ilin, Han Guo, Peter Richtárik, and Dan Alistarh<br>
 <b>Pushing the limits of large language model quantization via the linearity theorem</b><br>
@@ -128,7 +134,7 @@ Laurent Condat and Peter Richtárik<br>
 Peter Richtárik, Simone Maria Giancola, Dymitr Lubczyk, and Robin Yadav<br>
 <b>Local curvature descent: Squeezing more curvature out of standard and Polyak gradient descent</b><br>
 NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
-[<a href="https://arxiv.org/abs/2405.16574">arXiv</a>] [method: LCD1, LCD2, LCD3] <br><br> 
+[<a href="https://arxiv.org/abs/2405.16574">arXiv</a>] [method: LCD1, LCD2, LCD3] [<a href="posters/Poster-LCD_2024.pdf">poster</a>] <br><br> 
 
 [253] 
 Alexander Tyurin and Peter Richtárik<br>
@@ -208,7 +214,9 @@ Alexander Tyurin, Marta Pozzi, Ivan Ilin, and Peter Richtárik<br>
 <b>Shadowheart SGD: Distributed asynchronous SGD with optimal time complexity under arbitrary computation and communication heterogeneity</b><br>
 Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 <span class="important">Asynchronous Optimization</span><br>         
-[<a href="https://arxiv.org/abs/2402.04785">arXiv</a>] [method: Shadowheart SGD] <br><br> 
+[<a href="https://arxiv.org/abs/2402.04785">arXiv</a>] [method: Shadowheart SGD] [<a href="posters/Poster-Shadowheart-SGD.pdf">poster</a>]  <br><br> 
+
+
 
 [241] 
 Andrei Panferov, Yury Demidovich, Ahmad Rammal, and Peter Richtárik<br>
