--- a/i_talks.html
+++ b/i_talks.html
@@ -89,10 +89,6 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 <a href="https://iclr.cc/Conferences/2025">The 13th International Conference on Learning  (ICLR 2025)</a>, Singapore, April 24-28, 2025 
 </p>
 
-<p>
-<a href="https://cemse.kaust.edu.sa/amfs">Applied Mathematics School</a>, KAUST, Saudi Arabia, December 1-5, 2024 (lecturer)
-</p>
-
 <!-- <p>
 <a href=verb"http://lsec.cc.ac.cn/~icnonla23/index.html">The 14th International Conference of Numerical Optimization and Numerical Linear Algebra (ICNONLA)</a>, Taiyuan, Shanxi Province, China, August 15-18, 2023 (plenary talk; invited by Ya-xiang Yuan). 
 </p>
@@ -111,6 +107,17 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 
 
 <h1>2024 Talks</h1>
+
+<p>
+[256]
+KAUST and Aramco DIT Sector Workshop, online, December 3, 2024
+</p>
+
+<p>
+[255]
+<a href="https://cemse.kaust.edu.sa/amfs">Applied Mathematics School</a>, KAUST, Saudi Arabia, December 2, 2024 (lecturer)
+</p>
+
 
 <p>
 [254]
