--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
 
 <h1> Prepared in 2024 </h1>
 
+[268] 
+Elnur Gasanov and Peter Richtárik<br>
+<b>Speeding up stochastic proximal optimization in the high Hessian dissimilarity setting</b><br>
+[<a href="https://arxiv.org/abs/2412.13619">arXiv</a>] [method: L-SVRP] <br><br> 
+
 [267] 
 Yury Demidovich, Petr Ostroukhov, Grigory Malinovsky, Samuel Horváth, Martin Takáč, Peter Richtárik, and Eduard Gorbunov<br>
 <b>Methods with local steps and random reshuffling for generally smooth non-convex federated optimization</b><br>
