--- a/index.html
+++ b/index.html
@@ -44,6 +44,40 @@
         <div id="content">
 
 
+<h3>December 19, 2024</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2412.13619">
+"Speeding up Stochastic Proximal Optimization in the High Hessian Dissimilarity Setting"</a> -
+joint work with Elnur Gasanov.
+<br>
+<br>
+  
+Abstract: <i>Stochastic proximal point methods have recently garnered renewed attention within the optimization community, primarily due to their desirable theoretical properties. Notably, these methods exhibit a convergence rate that is independent of the Lipschitz smoothness constants of the loss function, a feature often missing in the loss functions of modern ML applications. In this paper, we revisit the analysis of the Loopless Stochastic Variance Reduced Proximal Point Method (L-SVRP). Building on existing work, we establish a theoretical improvement in the convergence rate in scenarios characterized by high Hessian dissimilarity among the functions. Our concise analysis, which does not require smoothness assumptions, demonstrates a significant improvement in communication complexity compared to standard stochastic gradient descent.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+<h3>December 13, 2024</h3>
+
+<h1>Attending KAUST Commencement</h1>
+
+I am attending the Commencement at KAUST. My MS student <a href="https://ivan-ilin.netlify.app">Ivan Ilin</a> got his MS degree! <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
         
 <h3>December 3, 2024</h3>
 
