--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,18 @@
 
 <h1> Prepared in 2024 </h1>
 
+
+
+[270] 
+Igor Sokolov and Peter Richtárik<br>
+<b>MARINA-P: Superior performance in non-smooth federated optimization with adaptive stepsizes</b><br>
+[<a href="https://arxiv.org/abs/arXiv:2412.17082">arXiv</a>] [method: MARINA-P] <br><br> 
+
+[269] 
+Artavazd Maranjyan, Abdurakhmon Sadiev, and Peter Richtárik<br>
+<b>Differentially private random block coordinate descent</b><br>
+[<a href="https://arxiv.org/abs/arXiv:2412.17054">arXiv</a>] [method: DP-SkGD, DP-SkGD-BS, DP-CD] <br><br> 
+
 [268] 
 Elnur Gasanov and Peter Richtárik<br>
 <b>Speeding up stochastic proximal optimization in the high Hessian dissimilarity setting</b><br>
