--- a/i_papers.html
+++ b/i_papers.html
@@ -54,6 +54,7 @@
 [270] 
 Igor Sokolov and Peter Richtárik<br>
 <b>MARINA-P: Superior performance in non-smooth federated optimization with adaptive stepsizes</b><br>
+<span class="important">Federated Learning Paper</span><br> 
 [<a href="https://arxiv.org/abs/arXiv:2412.17082">arXiv</a>] [method: MARINA-P] <br><br> 
 
 [269] 
