--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,10 @@
 
 <h1> Prepared in 2024 </h1>
 
+[271] 
+Egor Shulgin and Peter Richtárik<br>
+<b>On the convergence of DP-SGD with adaptive clipping</b><br>
+[<a href="hhttps://arxiv.org/abs/2412.19916">arXiv</a>] [method: QC-SGD, DP-QC-SGD] <br><br> 
 
 [270] 
 Igor Sokolov and Peter Richtárik<br>
