--- a/i_papers.html
+++ b/i_papers.html
@@ -53,7 +53,7 @@
 [271] 
 Egor Shulgin and Peter Richtárik<br>
 <b>On the convergence of DP-SGD with adaptive clipping</b><br>
-[<a href="hhttps://arxiv.org/abs/2412.19916">arXiv</a>] [method: QC-SGD, DP-QC-SGD] <br><br> 
+[<a href="https://arxiv.org/abs/2412.19916">arXiv</a>] [method: QC-SGD, DP-QC-SGD] <br><br> 
 
 [270] 
 Igor Sokolov and Peter Richtárik<br>
