--- a/i_talks.html
+++ b/i_talks.html
@@ -89,22 +89,14 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 <a href="https://iclr.cc/Conferences/2025">The 13th International Conference on Learning  (ICLR 2025)</a>, Singapore, April 24-28, 2025 
 </p>
 
-<!-- <p>
-<a href=verb"http://lsec.cc.ac.cn/~icnonla23/index.html">The 14th International Conference of Numerical Optimization and Numerical Linear Algebra (ICNONLA)</a>, Taiyuan, Shanxi Province, China, August 15-18, 2023 (plenary talk; invited by Ya-xiang Yuan). 
+
+
+<h1>2025 Talks</h1>
+
+<p>
+[257]
+Research Seminar, Kempelen Institute of Intelligent Technologies (KInIT), Bratislava, Slovakia, January 7, 2025
 </p>
-!-->
-
-
-<!-- <p>
-<a href="https://irdta.eu/deeplearn/2022au/">7th International School on Deep Learning (DeepLearn 2022 Autumn)</a>, Luleå, Sweden, October 17-21, 2022 (invited 4.5h mini-course on Federated Learning)
-</p>
-!-->
-
-<!-- <p>
-<a href="https://groups.oist.jp/mlss">MLSS 2024</a> The Machine Learning Summer School, Okinawa, Japan, March 4-15, 2024 (invited talk - had to decline due to a conflict with another event)
-</p>
-!-->
-
 
 <h1>2024 Talks</h1>
 
