--- a/i_papers.html
+++ b/i_papers.html
@@ -47,6 +47,13 @@
         <div id="content"> All papers are listed below in reverse chronological order in which they appeared online.<br>
           <br>
           <meta charset="utf-8">
+          
+<h1> Prepared in 2025 </h1>
+
+[272] 
+Artavazd Maranjyan, Alexander Tyurin and Peter Richtárik<br>
+<b>Ringmaster ASGD: The first asynchronous SGD with optimal time complexity</b><br>
+[<a href="https://arxiv.org/abs/2501.16168">arXiv</a>] [method: Naive Optimal ASGD, Ringmaster ASGD] <br><br> 
 
 <h1> Prepared in 2024 </h1>
 
@@ -74,12 +81,15 @@ Elnur Gasanov and Peter Richtárik<br>
 [267] 
 Yury Demidovich, Petr Ostroukhov, Grigory Malinovsky, Samuel Horváth, Martin Takáč, Peter Richtárik, and Eduard Gorbunov<br>
 <b>Methods with local steps and random reshuffling for generally smooth non-convex federated optimization</b><br>
+13th International Conference on Learning Representations (ICLR 2025)
+<br>
 <span class="important">Federated Learning Paper</span><br>   
 [<a href="https://arxiv.org/abs/2412.02781">arXiv</a>] [method:  Clip-LocalGDJ, CLERR, Clipped RR-CLI] <br><br> 
 
 [266] 
 Vladimir Malinovskii, Andrei Panferov, Ivan Ilin, Han Guo, Peter Richtárik, and Dan Alistarh<br>
 <b>Pushing the limits of large language model quantization via the linearity theorem</b><br>
+The 2025 Annual Conference of the Nations of the Americas Chapter of the ACL (NAACL 2025)<br>
 <span class="important">LLM Paper</span><br> 
 [<a href="https://arxiv.org/abs/2411.17525">arXiv</a>] [method: HIGGS] <br><br> 
 
@@ -124,6 +134,8 @@ NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
 [259] 
 Eduard Gorbunov, Nazarii Tupitsa, Sayantan Choudhury, Alen Aliev, Peter Richtárik, Samuel Horváth, and Martin Takáč<br>
 <b>Methods for convex $(L_0,L_1)$-smooth optimization: clipping, acceleration, and adaptivity</b><br>
+13th International Conference on Learning Representations (ICLR 2025)
+<br>
 [<a href="https://arxiv.org/abs/2409.14989">arXiv</a>] [method: L0L1-GD, L0L1-GD-PS, L0L1-STM, L0L1-AdGD, L0L1-SGD, L0L1-SGD-PS] <br><br> 
 
 [258] 
@@ -218,6 +230,8 @@ Yury Demidovich, Grigory Malinovsky, and Peter Richtárik<br>
 [244] 
 Laurent Condat, Artavazd Maranjyan, and Peter Richtárik<br>
 <b>LoCoDL: Communication-efficient distributed learning with local training and compression</b><br>
+13th International Conference on Learning Representations (ICLR 2025)
+<br>
 NeurIPS 2024 Workshop: Optimization for Machine Learning (OPT 2024) <br>
 <span class="important">Federated Learning Paper</span><br>          
 [<a href="https://arxiv.org/abs/2403.04348">arXiv</a>] [method: LoCoDL] <br><br> 
@@ -279,6 +293,8 @@ Konstantin Burlachenko, Abdulmajeed Alrowithi, Fahad Ali Albalawi, and Peter Ric
 [236] 
 Yury Demidovich, Grigory Malinovsky, Egor Shulgin, and Peter Richtárik<br>          
 <b>MAST: model-agnostic sparsified training</b><br>
+13th International Conference on Learning Representations (ICLR 2025)
+<br>
           <span class="important">Federated Learning Paper</span><br> 
 [<a href="https://arxiv.org/abs/2311.16086">arXiv</a>]    <br> <br> 
 
