--- a/i_talks.html
+++ b/i_talks.html
@@ -45,8 +45,14 @@
 
 <h1>Future Talks</h1>
 
+
+
 <p>
 Introduction to Machine Learning 2/2, Aramco, October 30 - November 2, 2025 (24 hours)
+</p>
+
+<p>
+<a href="https://flta-conference.org/flta-2025/">The 3rd IEEE International Conference on Federated Learning Technologies and Applications</a> (FLTA 2025),  Dubrovnik, Croatia, October 14-17, 2025 (General Chair)
 </p>
 
 <p>
