--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
           
 <h1> Prepared in 2025 </h1>
 
+[273] 
+Kai Yi and Peter Richtárik<br>
+<b>Symmetric pruning of large language models</b><br>
+[<a href="https://arxiv.org/abs/2501.18980">arXiv</a>] [method: Symmetric Wanda, R2-DSnoT] <br><br> 
+
 [272] 
 Artavazd Maranjyan, Alexander Tyurin and Peter Richtárik<br>
 <b>Ringmaster ASGD: The first asynchronous SGD with optimal time complexity</b><br>
