Ball Point Method

--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
           
 <h1> Prepared in 2025 </h1>
 
+[274] 
+Kaja Gruntkowska, Hanmin Li, Aadi Rane, and Peter Richtárik<br>
+<b>The ball-proximal (="broximal") point method: a new algorithm, convergence theory, and applications</b><br>
+[<a href="https://arxiv.org/abs/2502.02002">arXiv</a>] [method: BPM, || PPM ||] <br><br> 
+
 [273] 
 Kai Yi and Peter Richtárik<br>
 <b>Symmetric pruning of large language models</b><br>
