--- a/i_papers.html
+++ b/i_papers.html
@@ -50,10 +50,15 @@
           
 <h1> Prepared in 2025 </h1>
 
+[275] 
+Zhirayr Tovmasyan, Grigory Malinovsky, Laurent Condat, and Peter Richtárik<br>
+<b>Revisiting stochastic proximal point methods: generalized smoothness and similarity</b><br>
+[<a href="https://arxiv.org/abs/2502.03401">arXiv</a>] [method: SPPM] <br><br> 
+
 [274] 
 Kaja Gruntkowska, Hanmin Li, Aadi Rane, and Peter Richtárik<br>
 <b>The ball-proximal (="broximal") point method: a new algorithm, convergence theory, and applications</b><br>
-[<a href="https://arxiv.org/abs/2502.02002">arXiv</a>] [method: BPM, || PPM ||] <br><br> 
+[<a href="https://arxiv.org/abs/2502.02002">arXiv</a>] [method: BPM, || PPM || ] <br><br> 
 
 [273] 
 Kai Yi and Peter Richtárik<br>
