--- a/i_talks.html
+++ b/i_talks.html
@@ -60,10 +60,6 @@ Introduction to Machine Learning 1/2, Aramco, October 9-12, 2025 (24 hours)
 </p>
 
 <p>
-The Machine Learning Summer School (MLSS 2025), MBour, Senegal, August 2025 (invited lecturer)
-</p>
-
-<p>
 Introduction to Optimization 2/2, Aramco, July 24-29, 2025 (24 hours)
 </p>
 
@@ -76,7 +72,7 @@ Introduction to Optimization 2/2, Aramco, July 24-29, 2025 (24 hours)
 </p>
 
 <p>
-<a href="https://essai2025.eu">3rd European Summer School on Artificial Intelligence</a>, Bratislava, Slovakia, June 30 - July 4, 2025 (invited)
+<a href="https://mlss-senegal.github.io">The Machine Learning Summer School (MLSS 2025)</a>, MBour, Senegal, June 23, 2025 - July 4, 2025 (invited lecturer)
 </p>
 
 <p>
@@ -95,7 +91,9 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 <a href="https://iclr.cc/Conferences/2025">The 13th International Conference on Learning  (ICLR 2025)</a>, Singapore, April 24-28, 2025 
 </p>
 
-
+<p>
+<a href="https://www.kaust.edu.sa/en/news/rising-stars-in-ai-symposium-2025">Rising Stars in AI Symposium</a>, Thuwal, KAUST, Saudi Arabia, April 7-10, 2025 
+</p>
 
 <h1>2025 Talks</h1>
 
