--- a/i_events.html
+++ b/i_events.html
@@ -51,6 +51,38 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
 
 <ol reversed>
+  
+  <li><a href="https://flta-conference.org/flta-2025/committee.php#organizing-committee"><b>The 3rd International Conference on Federated Learning Technologies and Applications (FLTA 2025)</b></a>, Dubrovnik, Croatia, October 14-17, 2025
+
+  <ul>
+    <li> General Chair </li>
+  </ul>
+  
+  <li><a href="https://icml.cc/Conferences/2025"><b>ICML 2025</b></a>, Vancouver, Canada, July 13-19, 2025
+  <ul>
+    <li> Area Chair </li>
+  </ul>
+  </li>  
+  
+    <li><a href="https://iclr.cc/Conferences/2025"><b>ICLR 2025</b></a>,  Singapore, April 24-28, 2025
+  <ul>
+    <li> Area Chair </li>
+  </ul>
+  </li>
+ 
+
+  
+</ol>
+
+<h1> Past Events </h1>
+
+<ol reversed>
+
+ <li><a href="https://neurips.cc/Conferences/2024"><b>NeurIPS 2024</b></a>, Vancouver, Canada, December 10-15, 2024
+
+  <ul>
+    <li> Area Chair </li>
+  </ul>
 
   <li><a href="https://icml.cc/Conferences/2024"><b>ICML 2024</b></a>, Vienna, Austria, July 21-27, 2024
   <ul>
@@ -70,13 +102,6 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
   </ul>
   </li>
 
-
-  
-</ol>
-
-<h1> Past Events </h1>
-
-<ol reversed>
 
   <li><a href="https://neurips.cc/Conferences/2023"><b>NeurIPS 2023</b></a>, New Orleans, USA, December 10-16, 2023
 
