--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,21 @@
           
 <h1> Prepared in 2025 </h1>
 
+[278] 
+Egor Shulgin, Sarit Khirirat, and Peter Richtárik<br>
+<b>Smoothed normalization for efficient distributed private optimization</b><br>
+[<a href="https://arxiv.org/abs/2502.13482">arXiv</a>] [method: α-𝖭𝗈𝗋𝗆𝖤𝖢] <br><br> 
+
+[277] 
+Artem Riabinin, Ahmed Khaled, and Peter Richtárik<br>
+<b>A novel unified parametric assumption for nonconvex optimization</b><br>
+[<a href="https://arxiv.org/abs/2502.12329">arXiv</a>] [method: GD, SGD] <br><br> 
+
+[276] 
+Rustem Islamov, Samuel Horváth, Aurelien Lucchi, Peter Richtárik, and Eduard Gorbunov<br>
+<b>Double momentum and error feedback for clipping with fast rates and differential privacy</b><br>
+[<a href="https://arxiv.org/abs/2502.11682">arXiv</a>] [method: Clip21-SGD2M] <br><br> 
+
 [275] 
 Zhirayr Tovmasyan, Grigory Malinovsky, Laurent Condat, and Peter Richtárik<br>
 <b>Revisiting stochastic proximal point methods: generalized smoothness and similarity</b><br>
