--- a/i_team.html
+++ b/i_team.html
@@ -105,7 +105,7 @@
               <a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
-            <li><a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a> (6/2022-present), KAUST
+            <li><a href="https://www.igor-sokolov.com">Igor Sokolov</a> (6/2022-present), KAUST
               <a href="https://scholar.google.com/citations?hl=en&user=OBbPecwAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
@@ -382,7 +382,7 @@
               <br> <i>next position: PhD Student, KAUST</i>
             </li>          
        
-            <li><a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a> (8/2020-05/2022), KAUST
+            <li><a href="https://www.igor-sokolov.com">Igor Sokolov</a> (8/2020-05/2022), KAUST
                 <br> <i>next position: PhD Student, KAUST</i>
             </li>
 
@@ -564,7 +564,7 @@
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 6/2019-9/2019</li>
             <li><a href="https://github.com/Selim78">Sélim Chraibi</a> (Grenoble, Rhône-Alpes), 4/2019-9/2019 </li>
             <li> Ľudovít Horváth (Comenius University), 2/2019-3/2019</li>
-            <li><a href="https://www.researchgate.net/profile/Igor_Sokolov14">Igor Sokolov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
+            <li><a href="https://www.igor-sokolov.com">Igor Sokolov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li><a href="https://www.researchgate.net/profile/Vladislav_Elsukov">Vladislav Elsukov</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
