--- a/i_papers.html
+++ b/i_papers.html
@@ -78,7 +78,7 @@ Kaja Gruntkowska, Hanmin Li, Aadi Rane, and Peter Richtárik<br>
 [273] 
 Kai Yi and Peter Richtárik<br>
 <b>Symmetric pruning of large language models</b><br>
-[<a href="https://arxiv.org/abs/2501.18980">arXiv</a>] [method: Symmetric Wanda, R2-DSnoT] <br><br> 
+[<a href="https://arxiv.org/abs/2501.18980">arXiv</a>] [method: Symmetric Wanda, R2-DSnoT] [<a href="posters/Poster-SymWanda.pdf">poster</a>] <br><br> 
 
 [272] 
 Artavazd Maranjyan, Alexander Tyurin and Peter Richtárik<br>
