mid-semester break

--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+<h3>March 9, 2025</h3>
+
+<h1>Mid-semester Break</h1>
+  
+It's mid-semester break at KAUST right now (March 9-10).
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
 
 <h3>February 19, 2025</h3>
 
