--- a/i_papers.html
+++ b/i_papers.html
@@ -50,30 +50,35 @@
           
 <h1> Prepared in 2025 </h1>
 
-[278] 
+[279] 
 Egor Shulgin, Sarit Khirirat, and Peter Richtárik<br>
 <b>Smoothed normalization for efficient distributed private optimization</b><br>
 [<a href="https://arxiv.org/abs/2502.13482">arXiv</a>] [method: α-𝖭𝗈𝗋𝗆𝖤𝖢] <br><br> 
 
-[277] 
+[278] 
 Artem Riabinin, Ahmed Khaled, and Peter Richtárik<br>
 <b>A novel unified parametric assumption for nonconvex optimization</b><br>
 [<a href="https://arxiv.org/abs/2502.12329">arXiv</a>] [method: GD, SGD] <br><br> 
 
-[276] 
+[277] 
 Rustem Islamov, Samuel Horváth, Aurelien Lucchi, Peter Richtárik, and Eduard Gorbunov<br>
 <b>Double momentum and error feedback for clipping with fast rates and differential privacy</b><br>
 [<a href="https://arxiv.org/abs/2502.11682">arXiv</a>] [method: Clip21-SGD2M] <br><br> 
 
-[275] 
+[276] 
 Zhirayr Tovmasyan, Grigory Malinovsky, Laurent Condat, and Peter Richtárik<br>
 <b>Revisiting stochastic proximal point methods: generalized smoothness and similarity</b><br>
 [<a href="https://arxiv.org/abs/2502.03401">arXiv</a>] [method: SPPM] <br><br> 
 
-[274] 
+[275] 
 Kaja Gruntkowska, Hanmin Li, Aadi Rane, and Peter Richtárik<br>
 <b>The ball-proximal (="broximal") point method: a new algorithm, convergence theory, and applications</b><br>
 [<a href="https://arxiv.org/abs/2502.02002">arXiv</a>] [method: BPM, || PPM || ] <br><br> 
+
+[274] 
+Artavazd Maranjyan, El Mehdi Saad, Peter Richtárik, and Francesco Orabona<br>
+<b>ATA: Adaptive task allocation for efficient resource management in distributed machine learning</b><br>
+[<a href="https://arxiv.org/abs/2502.00775">arXiv</a>] [method: ATA] <br><br> 
 
 [273] 
 Kai Yi and Peter Richtárik<br>
