--- a/index.html
+++ b/index.html
@@ -169,6 +169,28 @@ Abstract: <i>Non-smooth and non-convex global optimization poses significant cha
 <br> 
 
 
+
+<h3>February 2, 2025</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2502.00775">
+"TA: Adaptive Task Allocation for Efficient Resource Management in Distributed Machine Learning"</a> -
+joint work with Artavazd Maranjyan, El Mehdi Saad, and Francesco Orabona.
+<br>
+<br>
+  
+Abstract: <i>Asynchronous methods are fundamental for parallelizing computations in distributed machine learning. They aim to accelerate training by fully utilizing all available resources. However, their greedy approach can lead to inefficiencies using more computation than required, especially when computation times vary across devices. If the computation times were known in advance, training could be fast and resource-efficient by assigning more tasks to faster workers. The challenge lies in achieving this optimal allocation without prior knowledge of the computation time distributions. In this paper, we propose ATA (Adaptive Task Allocation), a method that adapts to heterogeneous and random distributions of worker computation times. Through rigorous theoretical analysis, we show that ATA identifies the optimal task allocation and performs comparably to methods with prior knowledge of computation times. Experimental results further demonstrate that ATA is resource-efficient, significantly reducing costs compared to the greedy approach, which can be arbitrarily expensive depending on the number of workers.</i>
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
         
 <h3>January 31, 2025</h3>
 
