--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Abstract: <i>Non-smooth and non-convex global optimization poses significant cha
 
 <span class="important">New paper out:</span>
 <a href="https://arxiv.org/abs/2502.00775">
-"TA: Adaptive Task Allocation for Efficient Resource Management in Distributed Machine Learning"</a> -
+"ATA: Adaptive Task Allocation for Efficient Resource Management in Distributed Machine Learning"</a> -
 joint work with Artavazd Maranjyan, El Mehdi Saad, and Francesco Orabona.
 <br>
 <br>
