--- a/i_talks.html
+++ b/i_talks.html
@@ -91,9 +91,17 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 <a href="https://iclr.cc/Conferences/2025">The 13th International Conference on Learning  (ICLR 2025)</a>, Singapore, April 24-28, 2025 
 </p>
 
+<!-- 
 <p>
 <a href="https://www.kaust.edu.sa/en/news/rising-stars-in-ai-symposium-2025">Rising Stars in AI Symposium</a>, Thuwal, KAUST, Saudi Arabia, April 7-10, 2025 
 </p>
+-->
+
+<p>
+Distinguished Lecture in Applied Mathematics, The Hong Kong Polytechnic University, Hong Kong, April 8, 2025 
+</p>
+
+
 
 <h1>2025 Talks</h1>
 
