--- a/i_papers.html
+++ b/i_papers.html
@@ -50,6 +50,11 @@
           
 <h1> Prepared in 2025 </h1>
 
+[280] 
+Konstantin Burlachenko and Peter Richtárik<br>
+<b>BurTorch: Revisiting training from first principles by coupling autodiff, math optimization, and systems</b><br>
+[<a href="https://arxiv.org/abs/2503.13795">arXiv</a>] [method: BurTorch] <br><br> 
+
 [279] 
 Egor Shulgin, Sarit Khirirat, and Peter Richtárik<br>
 <b>Smoothed normalization for efficient distributed private optimization</b><br>
@@ -754,6 +759,7 @@ Advances in Neural Information Processing Systems 38 (NeurIPS 2024)</a> <br>
 
           [173] Ilyas Fatkhullin, Igor Sokolov, Eduard Gorbunov, Zhize Li and Peter Richtárik<br>
           <b>EF21 with bells & whistles: practical algorithmic extensions of modern error feedback </b><br>
+          Journal of Machine Learning Research, 2025 \\
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2110.03294">arXiv</a>] [method: EF21-SGD, EF21-PAGE, EF21-PP, EF21-BC, EF21-HB, EF21-Prox] [<a href="https://github.com/IgorSokoloff/ef21_experiments_source_code">github</a>] <br>
           <br>
