--- a/i_talks.html
+++ b/i_talks.html
@@ -64,6 +64,10 @@ Introduction to Optimization 2/2, Aramco, July 24-29, 2025 (24 hours)
 </p>
 
 <p>
+<a href="https://www.auai.org/uai2025/">41st Conference on Uncertainty in Artificial Intelligence (UAI 2025)</a>, Rio de Janeiro, Brazil, July 21-25, 2025
+</p>
+
+<p>
 <a href="https://sites.google.com/view/iccopt2025/home">2025 International Conference on Continuous Optimization (ICCOPT 2025)</a>, The University of Southern California, Los Angeles, USA, July 19-24, 2025
 </p>
 
@@ -80,7 +84,7 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 </p>
 
 <p>
-3rd Workshop on Computational Optimization, Vienna, Austria, June 4-6, 2025 (invited by Radu Bot)
+<a href="https://ps-mathematik.univie.ac.at/e/index.php?event=VWCO25">3rd Vienna Workshop on Computational Optimization 2025 (VWCO25)</a>, Vienna, Austria, June 4-6, 2025 (invited by Radu Bot)
 </p>
 
 <p>
@@ -91,19 +95,17 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 <a href="https://iclr.cc/Conferences/2025">The 13th International Conference on Learning  (ICLR 2025)</a>, Singapore, April 24-28, 2025 
 </p>
 
-<!-- 
 <p>
 <a href="https://www.kaust.edu.sa/en/news/rising-stars-in-ai-symposium-2025">Rising Stars in AI Symposium</a>, Thuwal, KAUST, Saudi Arabia, April 7-10, 2025 
 </p>
--->
-
-<p>
-Distinguished Lecture in Applied Mathematics, The Hong Kong Polytechnic University, Hong Kong, April 8, 2025 
-</p>
-
 
 
 <h1>2025 Talks</h1>
+
+<p>
+[258]
+Distinguished Lecture in Applied Mathematics, The Hong Kong Polytechnic University, Hong Kong, March 31, 2025 
+</p>
 
 <p>
 [257]
