--- a/index.html
+++ b/index.html
@@ -44,6 +44,30 @@
         <div id="content">
 
 
+<h3>March 30, 2025</h3>
+
+<h1>Visiting Hong Kong</h1>
+  
+I am visiting Hong Kong this week on an invite by <a href="https://www.polyu.edu.hk/ama/profile/dfsun/">Defeng Sun</a>. 
+
+ <br>
+  <br>
+<img alt="" src="imgs/PR-Hong-Kong-2025.jpg" width="400">
+<br>
+ <br>
+
+Tomorrow, I am giving a <a href="https://www.polyu.edu.hk/ama/news-and-events/events/2025/3/20250331-the-elusive-power-of-local-training-in-federated-learning/">Distinguished Lecture in Applied Mathematics</a> at The Hong Kong Polytechnic University. 
+  
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>March 19, 2025</h3>
 
 <h1>New Paper</h1>
