--- a/i_talks.html
+++ b/i_talks.html
@@ -96,15 +96,22 @@ Introduction to Optimization 1/2, Aramco, June 26-29, 2025 (24 hours)
 </p>
 
 <p>
-<a href="https://www.kaust.edu.sa/en/news/rising-stars-in-ai-symposium-2025">Rising Stars in AI Symposium</a>, Thuwal, KAUST, Saudi Arabia, April 7-10, 2025 
+<a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar (FLOW)</a>, Virtual Seminar Series, April 8, 2025
 </p>
+
 
 
 <h1>2025 Talks</h1>
 
 <p>
+[259]
+<a href="https://www.kaust.edu.sa/en/news/rising-stars-in-ai-symposium-2025">Rising Stars in AI Symposium</a>, Thuwal, KAUST, Saudi Arabia, April 7-10, 2025 
+</p>
+
+
+<p>
 [258]
-Distinguished Lecture in Applied Mathematics, The Hong Kong Polytechnic University, Hong Kong, March 31, 2025 
+<a href="https://www.polyu.edu.hk/ama/news-and-events/events/2025/3/20250331-the-elusive-power-of-local-training-in-federated-learning/">Distinguished Lecture in Applied Mathematics, The Hong Kong Polytechnic University</a>, Hong Kong, March 31, 2025 
 </p>
 
 <p>
