--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
         <div id="content">
 
 
+<h3>April 7-10, 2025</h3>
+
+<h1>Rising Stars in AI Symposium @ KAUST</h1>
+  
+I am attending the <a href="https://www.kaust.edu.sa/en/news/rising-stars-in-ai-symposium-2025">Rising Stars in AI Symposium</a> here at KAUST, organized by our KAUST Center if Excellence in Generative AI. <br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br> 
+
+
+
 <h3>March 30, 2025</h3>
 
 <h1>Visiting Hong Kong</h1>
